PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Add *pel-emacs-config-features**, bound to ~<f11> ? e C~ . Use it to determine if Emacs is built with native compilation.
- Add *pel-rst-table-dup-separator-lines* bound to ~<f12> M-t~ and ~M-<f12> M-t~ in rst-mode.
  This helps writing reStructuredText simple tables.
- The *pel-to-forward-space*, *pel-to-backward-space*, *pel-forward-syntaxchange-start* and *pel-backward-syntaxchange-start*
  now support shift-selection marking.
- Add *pel-shell-as-sudo* command bound to ~<f11> z !~.
- Add preliminary support for the Swift programming language when the *pel-use-swift* user option is set to t.
- Add preliminary support for the Zig programming language when the *pel-use-zig* user option is set to t.
- New *pel-emacs-buffer-stats* command, bound to ~<f11> b ?~ instead of pel-show-window-previous-buffer, which
  remains but is no longer bound to a key.
  The new command provides more information, listing the count of all buffers and the count of buffer visiting files,
  special buffers and internal buffers as well as the buffer last used in the current window.
  The command is also bound to ~<f11> ? e b~.
  Also added ~<f11> b B~ key binding to *buffer-menu* and ~<f11> b m~ to *buffer-menu-open* for awareness.
- Change Perl key bindings: *cperl-perldoc-at-point* PEL extra binding changed from ~<f12> ?~ to ~<f12><f12>~.
  An the *cperl-perldoc* now has an extra key binding to ~<f12> h~ to make it simpler to type the perldoc
  option such as ~<f12> h -f~ to search for a specific function name.
- Add support to perl-live-coding when *pel-use-perl-live-coding* user-option is set.
  This provides a very nice and powerful dynamic Perl environment.
  Also added the ~<f12> l~ key binding to *perl-live-run*