@@ -2,6 +2,9 @@ PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-
 
 * Changes since Version 0.4.1:
 ** Modifications, Fixes and Improvements:
+- Supports org-mode modification in Emacs 30.1 and later: tab-width for org-mode is fixed to 8.
+  For Emacs 30.1 and later, PEL does not change tab-width in org-mode to the value identified by
+  the *pel-org-tab-width* user-option.  PEL continues to honour it in previous versions of Emacs.
 - Add *pel-emacs-config-features**, bound to ~<f11> ? e C~ . Use it to determine if Emacs is built with native compilation.
 - Add *pel-rst-table-dup-separator-lines* bound to ~<f12> M-t~ and ~M-<f12> M-t~ in rst-mode.
   This helps writing reStructuredText simple tables.
